--- a/contact.html
+++ b/contact.html
@@ -82,26 +82,86 @@
 <!--right start -->
 <div id="right">
 <!--green start -->
-<div id="green">
-<h2>Why ecode</h2>
-<p><span>Suspendisse tellus.</span> Ut imperdiet eros id tortor. Phasellus dignissim<br /> 
-ligula at enim. Donec dictum, sem et dictum vehicula, sapien leo viverra</p>
-</div>
 <!--green end -->
-<h3>Latest News And Events</h3>
-<h4>On 10 th July 2007</h4>
-<p class="rightTxt1">Vestibulum elit. Aenean ut eros. Donec ut lectus. Morbi cursus ante at urna. Namlutpaean sollicitudin, nisl eu volutpat:<span> aliquet, rhoncus vulputate magna.</span></p>
-<p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
-<div id="flash">
-<img src="images/flash_pic.gif" alt="" />
-<ul>
-<li class="redBg">condimentum</li>
-<li class="blackBg">neque varius risus magna</li>
-</ul>
-<p>Fusce mauris neque, tempor ut, <span>(imperdiet ut)</span>, auctor a, nuncut rhoncusconm vulputate magna. Fusce pede libero, malesuada non, condimentum eget, rutm nec, dolor donec aliquam elit a pede</p>
-<a href="#">Read More</a>
-<br class="spacer" />
+<h3>Contact ecode </h3>
+<p class="rightTxt1"><br />
+  1234 12th Place, M1234
+Bradenton, 
+
+    <br />
+    FL 12345, USA.</p>
+<p class="rightTxt2">Phone: 100-100-1000 
+
+  <br />
+  Fax: 100-100-1000 or 100-200-20000 
+
+
+  <br />
+  <br />
+  Office Hours: 8:30 a.m. to 5 p.m. Central Time 
+
+  <br />
+  Email: contact@ecode.com</p>
+<h3><br/></h3>
+<p class="rightTxt1"><br/></p>
+<p class="rightTxt2">If you have any questions, please fill out the form below and we will respond to   you at the earliest.</p>
+<div class="contactMain">
+  <div class="contactindicatestext"><span class="leftbodyTxt3"><span class="errortext">*</span> indicates required fields</span></div>
+  <div class="contacttext">Subject: </div>
+  <div class="contactdropdownformfield" id="ctbd">
+    <label>
+      <select name="select" class="dropdownEffect">
+        <option>Custom Design Services</option>
+        <option>Graphic Design Services</option>
+        <option>Website Design Services</option>
+        <option>Open Source Inquiry</option>
+      </select>
+      </label>
+  </div>
+  <div class="contacttext">Your Name: </div>
+  <div class="contactformfield" id="nametxtbox">
+    <input name="textfield2" type="text" class="textboxEffect" />
+    <label><span class="errortext">*</span> </label>
+  </div>
+  <div class="contacttext" id="bname">Business Name: </div>
+  <div class="contactformfield" id="btxtbox">
+    <input name="textfield22" type="text" class="textboxEffect" />
+    <label></label>
+  </div>
+  <div class="contacttext" id="email">Email Address: </div>
+  <div class="contactformfield" id="emailtxtbox">
+    <input name="textfield222" type="text" class="textboxEffect" />
+    <label><span class="errortext">*</span></label>
+  </div>
+  <div class="contacttext" id="phno">Phone Number: </div>
+  <div class="contactformfield" id="phtxtbox">
+    <input name="textfield2222" type="text" class="textboxEffect" />
+    <label><span class="errortext">*</span></label>
+  </div>
+  <div class="contacttext" id="cellno">Cell Number: </div>
+  <div class="contactformfield" id="celltxtbox">
+    <input name="textfield22222" type="text" class="textboxEffect" />
+    <label></label>
+  </div>
+  <div class="contacttext" id="contactvia">Contact Via: </div>
+  <div class="contactdropdownformfield" id="cvtbd">
+    <label>
+      <select name="select2" class="dropdownEffect">
+        <option>Email</option>
+        <option>Phone Number</option>
+        <option>Cell Number</option>
+      </select>
+      </label>
+  </div>
+  <div class="contacttext" id="div">Comments: </div>
+  <div class="contactformmessage" id="commentstextbox">
+    <textarea name="textarea" class="MassageboxEffect" cols="" rows=""></textarea>
+  </div>
+  <div class="submitbuttonarea">
+    <input name="Submit" type="submit" class="subbtn" value="Submit" />
+  </div>
 </div>
+<p class="rightTxt2"><br/></p>
 </div>
 <!--right end -->
 <br class="spacer" />
@@ -129,8 +189,7 @@ ligula at enim. Donec dictum, sem et dictum vehicula, sapien leo viverra</p>
     <p class="design">Designed by : <a href="http://www.templateworld.com/" target="_blank" class="link">Template 
       World</a></p>
     <a href="http://validator.w3.org/check?uri=referer" class="xhtml">Xhtml</a> 
-    <a href="http://jigsaw.w3.org/css-validator/check/referer" class="css">Css</a> 
-  </div>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer" class="css">Css</a></div>
 </div>
 <!--footer end -->
 </body>
