--- a/inner-page.html
+++ b/inner-page.html
@@ -82,15 +82,16 @@
 <!--right start -->
 <div id="right">
 <!--green start -->
-<div id="green">
-<h2>Why ecode</h2>
-<p><span>Suspendisse tellus.</span> Ut imperdiet eros id tortor. Phasellus dignissim<br /> 
-ligula at enim. Donec dictum, sem et dictum vehicula, sapien leo viverra</p>
-</div>
 <!--green end -->
-<h3>Latest News And Events</h3>
-<h4>On 10 th July 2007</h4>
+<h3>About ecode </h3>
 <p class="rightTxt1">Vestibulum elit. Aenean ut eros. Donec ut lectus. Morbi cursus ante at urna. Namlutpaean sollicitudin, nisl eu volutpat:<span> aliquet, rhoncus vulputate magna.</span></p>
+<p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
+<h3> ecode Services </h3>
+<p class="rightTxt1">Vestibulum elit. Aenean ut eros. Donec ut lectus. Morbi cursus ante at urna. Namlutpaean sollicitudin, nisl eu volutpat:<span> aliquet, rhoncus vulputate magna.</span></p>
+<p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
+<p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
+<h3> ecode Services </h3>
+<p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
 <p class="rightTxt2">Fusce pede libero, malesuada non, <span>condimentum eget, rutrum nec</span>, dolor. Donec aliquam elit a pede. Aliquam et leo. Fusce nisi nibh, tincidunt a, consectetuer vel, ultrices sed, justo. Aenean in odio ut lacus pharetra fringilla. Duis faucibus pede ac dolor. Fusce hendrerit. Mauris id dui vel nunc interdum fringilla. <span>Mauris a quam.</span> Etiam vitae tortor at nisi pretium cursus</p>
 <div id="flash">
 <img src="images/flash_pic.gif" alt="" />
