--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>TemplateWorld.com Template - Web 2.0</title>
+<title>WDTeam | vitcorp</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -17,25 +17,17 @@
 <a href="#">Advance Search</a>
 </form>
 <ul class="nav">
-<li><a href="#" class="hover">Home</a></li>
-<li><a href="#">About Us</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Solutions</a></li>
-<li><a href="#">Testimonials</a></li>
-<li><a href="#">projects</a></li>
-<li><a href="#">online jobs</a></li>
-<li><a href="#">Login</a></li>
-<li><a href="#">Submission</a></li>
-<li class="noMargin"><a href="#">Contact Us</a></li>
+<li><a href="#" class="hover">???????</a></li>
+<li><a href="#">???????</a></li>
+<li><a href="#">???????</a></li>
+<li><a href="#">? ???</a></li>
+<li class="noMargin"><a href="#">????????</a></li>
 </ul>
 <ul class="sub">
-<li><a href="#">Who We Are</a></li>
-<li><a href="#">What Our Future</a></li>
-<li><a href="#">Forum</a></li>
-<li><a href="#">Company Profiles</a></li>
-<li><a href="#">Communications</a></li>
-<li><a href="#">Importance</a></li>
-<li class="noImg"><a href="#">Finance</a></li>
+<li><a href="#">WDTeam ?????????</a></li>
+<li><a href="#">?????</a></li>
+<li><a href="#">?????? ????????????</a></li>
+<li class="noImg"><a href="#">????????????</a></li>
 </ul>
 </div>
 </div>
