--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Corpora | Contact</title>
+<title>Corpora | Services</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/master.css" type="text/css" media="screen" />
@@ -15,8 +15,7 @@ Cufon.replace('ul#nav li a', {
 });
 Cufon.replace('blockquote p');
 Cufon.replace('#mainSlider h3, .sliderParagraph');
-Cufon.replace('a.darkButton, a.redButton');
-Cufon.replace('form#contactForm label');
+Cufon.replace('a.darkButton');
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 <script src="js/functions.js" type="text/javascript"></script>
@@ -58,7 +57,7 @@ Cufon.replace('form#contactForm label');
 </div>
 <div id="breadcrumbsContainer">
   <div class="centerContainer">
-    <p>You are here: <a href="index.html">Home</a> &nbsp;/&nbsp; <strong>Contact Us</strong> </p>
+    <p>You are here: <a href="index.html">Home</a> &nbsp;/&nbsp; <strong>Services</strong> </p>
   </div>
 </div>
 <div class="blankSeparator"> </div>
@@ -66,55 +65,37 @@ Cufon.replace('form#contactForm label');
   <div class="sidebarContainer fl">
     <div class="sidebarItem">
       <div class="sidebarHeader">
-        <h3>Corpora Contact Information</h3>
+        <h3>What We Offer</h3>
       </div>
-      <ul class="basicList">
-        <li>
-          <p>Insert your address here</p>
-          <p>Address Line 2</p>
-        </li>
-        <li>
-          <p>Insert your phone number here</p>
-        </li>
-        <li class="noBottomBorder">
-          <p>Insert your email address here</p>
-        </li>
+      <ul class="arrowList">
+        <li class="activeSidebarItem">Overview</li>
+        <li><a href="#">Video and Audio</a></li>
+        <li><a href="#">Another Great Service</a></li>
+        <li><a href="#">E-Commerce Platform</a></li>
+        <li class="noBottomBorder"><a href="#">Giant Codex</a></li>
       </ul>
     </div>
-    <div class="sidebarItem">
-      <div class="sidebarHeader">
-        <h3>Driving Directions</h3>
-      </div>
-      <div class="sidebarGeneral">
-        <iframe width="244" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/?ie=UTF8&amp;ll=45.504422,-107.896729&amp;spn=0.384991,0.667419&amp;z=9&amp;output=embed"></iframe>
-        <br />
-        <small><a href="#" style="text-align:left">View Larger Map</a></small> </div>
-    </div>
   </div>
-  <div id="pageContent" class="fr"> <img src="img/contactPageImg.png" alt="" />
-    <p>To contact us, use the information on the left sidebar or simply fill our the form below to send us a message. All fields are required.</p>
-    <p>We’ll get back to you as soon as possible. Pinky swear!</p>
+  <div id="pageContent" class="fr"> <img src="img/servicesPageImg.png" alt="" />
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat lectus risus. Donec scelerisque turpis non ligula convallis viverra pharetra metus volutpat. Mauris eu mattis metus. Nullam et faucibus dui. In hac habitasse platea dictumst. Praesent ut massa arcu, eget fermentum leo. Quisque enim arcu, pellentesque eget laoreet in, faucibus et lectus. Aenean elementum ligula sed odio posuere quis consectetur lacus dignissim. Nunc leo mi, pulvinar ac posuere sed, luctus ultricies eros. Sed pharetra ligula id nibh euismod mollis.</p>
     <div class="sepContainer"> </div>
-    <form action="#" method="post" id="contactForm">
-      <fieldset>
-        <p class="oneHalfCol">
-          <label for="name">Your Name</label>
-          <input type="text" id="name" />
-        </p>
-        <p class="oneHalfCol">
-          <label for="email">Your Email Address</label>
-          <input type="text" id="email" />
-        </p>
-        <div class="cl"> </div>
-        <p>
-          <label for="message">Your Message</label>
-          <textarea id="message" cols="10" rows="10"></textarea>
-        </p>
-        <div class="blankSeparator"> </div>
-        <a class="redButton fl">Send Message</a>
-        <p class="additionalOptions fl">or <a href="#">Reset Form</a></p>
-      </fieldset>
-    </form>
+    <ul id="servicesList">
+      <li> <img src="img/serviceImg1.png" alt="" class="fl" />
+        <h3>Video and Audio</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat lectus risus. Donec scelerisque turpis non ligula convallis viverra pharetra metus volutpat. Mauris eu mattis metus. Nullam et faucibus dui. In hac habitasse platea dictumst. Praesent ut massa arcu, eget fermentum leo.</p>
+        <p><a href="#" class="readMoreLink">Read more about this service</a></p>
+      </li>
+      <li> <img src="img/serviceImg2.png" alt="" class="fl" />
+        <h3>Another Great Service</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat lectus risus. Donec scelerisque turpis non ligula convallis viverra pharetra metus volutpat. Mauris eu mattis metus. Nullam et faucibus dui. In hac habitasse platea dictumst. Praesent ut massa arcu, eget fermentum leo.</p>
+        <p><a href="#" class="readMoreLink">Read more about this service</a></p>
+      </li>
+      <li> <img src="img/serviceImg3.png" alt="" class="fl" />
+        <h3>E-Commerce Platform</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat lectus risus. Donec scelerisque turpis non ligula convallis viverra pharetra metus volutpat. Mauris eu mattis metus. Nullam et faucibus dui. In hac habitasse platea dictumst. Praesent ut massa arcu, eget fermentum leo.</p>
+        <p><a href="#" class="readMoreLink">Read more about this service</a></p>
+      </li>
+    </ul>
   </div>
 </div>
 <div class="blankSeparator"> </div>
