--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Corpora</title>
@@ -27,13 +27,13 @@ Cufon.replace('a.darkButton');
     <div id="contactInformationTop" class="fr">
       <ul>
         <li>
-          <p>Phone: <span>1.800.CORP</span></p>
+          <p>Телефон: <span>Нет</span></p>
         </li>
         <li>
-          <p>Email: <a href="#">office@corpora.com</a></p>
+          <p>Email: <a href="#">vitkuz.1999@gmail.com</a></p>
         </li>
         <li class="noBottomBorder">
-          <p class="fl">Follow Us:</p>
+          <p class="fl">Поделиться в:</p>
           <ul class="fl" id="socialBW">
             <li><a href="#"><img src="img/social/twitter.png" alt="" /></a></li>
             <li><a href="#"><img src="img/social/facebook.png" alt="" /></a></li>
@@ -47,12 +47,12 @@ Cufon.replace('a.darkButton');
 <div id="menuContainer">
   <div class="centerContainer">
     <ul id="nav">
-      <li><a href="index.html">Home<span>go to start</span></a></li>
-      <li><a href="services.html">Services<span>what we do</span></a></li>
-      <li><a href="gallery.html">Gallery<span>our best products</span></a></li>
-      <li><a href="#">Our Clients<span>what we've done for others</span></a></li>
-      <li><a href="#">About Us<span>who we are</span></a></li>
-      <li><a href="contact.html">Contact Us<span>let's keep in touch</span></a></li>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="services.html">Сервисы</a></li>
+      <li><a href="gallery.html">Галерея</a></li>
+      <li><a href="clients.html">Мои клиенты</a></li>
+      <li><a href="about.html">О мне</a></li>
+      <li><a href="contact.html">Контакты</a></li>
     </ul>
   </div>
 </div>
@@ -62,11 +62,10 @@ Cufon.replace('a.darkButton');
     <div id="mainSlider">
       <ul>
         <li> <img src="img/sliderImg1.png" alt="" class="slideImg fl" />
-          <h1>Awesome Business Card Design</h1>
-          <p class="sliderParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget metus ac diam laoreet luctus rhoncus non nisi. Aenean at lobortis augue.</p>
+          <h1>YouPlay</h1>
+          <p class="sliderParagraph">Программа для OS Windows позволяющая просматривать и скачивать видео с YouTube в несколько кликов мышиы.</p>
           <div class="blankSeparator"> </div>
-          <a class="darkButton fl">Buy it now! <img src="img/darkButtonImg.png" alt="" /></a>
-          <p class="additionalOptions fl">or <a href="#">Find Out More</a></p>
+          <a class="darkButton fl">Купить! <img src="img/darkButtonImg.png" alt="" /></a>
         </li>
         <li> <img src="img/sliderImg1.png" alt="" class="slideImg fl" />
           <h1>This is slide number 2</h1>
@@ -192,7 +191,7 @@ Cufon.replace('a.darkButton');
 <div id="footerContainer">
   <div class="centerContainer">
     <div class="oneThirdCol">
-      <h3>recent tweets</h3>
+      <h3>Последние твиты</h3>
       <ul id="tweetList">
         <li>
           <p>I'm looking for some cool web design #contract templates for #freelancers, any suggestions? <span>3 days ago</span></p>
@@ -206,8 +205,8 @@ Cufon.replace('a.darkButton');
       </ul>
     </div>
     <div class="oneThirdCol">
-      <h3>subscribe to our newsletter</h3>
-      <p>Enter your email address below to subscribe. You will receive our newsletter once a week.</p>
+      <h3>Подписаться на новости</h3>
+      <p>Введите свой E-Mail адрес для подписки.</p>
       <form action="#" method="post" id="subscribeForm">
         <fieldset>
           <div>
@@ -215,22 +214,22 @@ Cufon.replace('a.darkButton');
             <a href="#" id="newsletterSignup" class="redButton"><img src="img/redButtonImg.png" alt="" /></a> </div>
         </fieldset>
       </form>
-      <p> <a href="#">Terms of Use</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a href="#">Privacy Policy</a> </p>
+      <p> <a href="#">Лицензионное соглашение</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a href="#">Политика конфедициальности</a> </p>
     </div>
     <div class="oneThirdCol lastCol">
       <h3>let's keep in touch</h3>
       <p>You can contact us by using the contact information below or by sending us a message via our <a href="#">contact form</a>.</p>
       <ul id="contactInfoList">
         <li>85 Washington Ave., Suite 45, CA, USA</li>
-        <li>Phone: 1.800.CORP (1.800.2577)</li>
-        <li>Email: <a href="#">office@corpora.com</a></li>
+        <li>Телефон: 1.800.CORP (1.800.2577)</li>
+        <li>Email: <a href="#">vitkuz.1999@gmail.com</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div id="footerCopyrightContainer">
   <div class="centerContainer">
-    <p class="fl">&copy; Copyright 2011 Corpora. All rights reserved.</p>
+    <p class="fl">&copy; WDTeam 2016. Все права защищены.</p>
     <ul class="fr">
       <li><a href="#"><img src="img/social/twitter.png" alt="" /></a></li>
       <li><a href="#"><img src="img/social/facebook.png" alt="" /></a></li>
